UPdate form names.

--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
       <form id="submit-query-form" class="mx-auto w-50">
         <div class="form-group mt-10">
           <label for="email">Email address</label>
-          <input type="email" class="form-control no-border-radius" id="email">
+          <input type="email" class="form-control no-border-radius" id="email" name="email">
         </div>
         <div class="form-group mt-10">
           <label for="name">Your Name</label>
-          <input type="text" class="form-control no-border-radius" id="name">
+          <input type="text" class="form-control no-border-radius" id="name" name="name">
         </div>
         <div class="form-group mt-10">
           <label for="message">Your Message</label>
-          <textarea class="form-control no-border-radius" id="message" rows="3"></textarea>
+          <textarea class="form-control no-border-radius" id="message" name="message" rows="3"></textarea>
         </div>
         <button type="submit"
           class="btn btn-secondary no-border-radius mt-20 background-red border-none">Submit</button>
