--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -81,19 +83,26 @@
     <div class="container-md">
       <form id="submit-query-form" class="mx-auto w-50">
         <div class="form-group mt-10">
-          <label for="email">Email address</label>
-          <input type="email" class="form-control no-border-radius" id="email" name="email">
+          <label for="email">Email addresOur software development business is aware of how crucial it is to have quick access to and a clear understanding of your data. Because of this, we provide a thorough database design service that is customised to meet your unique requirements.s</label>
+          <input type="email" class="form-control no-border-radius" id="email" name="email" required>
         </div>
         <div class="form-group mt-10">
-          <label for="name">Your Name</label>
-          <input type="text" class="form-control no-border-radius" id="name" name="name">
+          <label for="name">Your name</label>
+          <input type="text" class="form-control no-border-radius" id="name" name="name" required>
         </div>
         <div class="form-group mt-10">
-          <label for="message">Your Message</label>
-          <textarea class="form-control no-border-radius" id="message" name="message" rows="3"></textarea>
+          <label for="message">Your message</label>
+          <textarea class="form-control no-border-radius" id="message" name="message" rows="3" required></textarea>
         </div>
-        <button type="submit"
-          class="btn btn-secondary no-border-radius mt-20 background-red border-none">Submit</button>
+        <div class="button-container">
+          <button type="submit" id="submit" name="submit" class="btn btn-secondary no-border-radius" disabled>
+            <i class="fas fa-spinner fa-spin" id="spinner" style="display: none;"></i>
+            <span id="submit-text">Submit</span>
+          </button>
+          <div class="form-group mt-10" id="status" name="status" style="display: none;">
+            <label>Email sent successfully!</label>
+          </div>
+        </div>
       </form>
     </div>
   </section>
